菜谱页面完善